--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
-"NamaBot":"BITCH-BOOT",
-"NomorOwner":"6587255583",
-"NamaOwner":"Denis",
+"NamaBot":"KYURA BOT",
+"NomorOwner":"6282322153431",
+"NamaOwner":"Kira Master",
 "HunterApi":"Ikyy69"
 }
